--- a/replica/style.css
+++ b/replica/style.css
@@ -1,12 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");
-/*
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Titillium Web", monospace;
-}
-*/
+
 /*  MAIN BODY  */
 body {
   background-color: #d9e0ff;
@@ -28,9 +21,11 @@ h1 {
 
 .img-gallery {
   display: grid;
+  gap: 1.5rem;
+  grid-template-columns: 1fr 1fr;
 }
 
 .img-gallery img {
-  height: 200px;
-  width: auto;
+  height: 300px;
+  width: 500px;
 }
